add sproc example with StackOverflow 2010 db

--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -7,6 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "MyConnectionString": "Server=localhost;Database=Employee;Trusted_Connection=True;"
+    "MyConnectionString": "Server=localhost;Database=Employee;Trusted_Connection=True;",
+    "StackOverflow": "Server=localhost;Database=StackOverflow2010;Trusted_Connection=True;"
   }
 }
