add useradmin db example

--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -8,6 +8,7 @@
   },
   "ConnectionStrings": {
     "MyConnectionString": "Server=localhost;Database=Employee;Trusted_Connection=True;",
-    "StackOverflow": "Server=localhost;Database=StackOverflow2010;Trusted_Connection=True;"
+    "StackOverflow": "Server=localhost;Database=StackOverflow2010;Trusted_Connection=True;",
+    "CronusUserAdmin": "Server=localhost;Database=CronusUserAdmin;Trusted_Connection=True;"
   }
 }
